fix overflow

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -5431,17 +5431,16 @@ button.close {
   -webkit-appearance: none;
 }
 
-.modal-open {
-  overflow: hidden;
+body.modal-open {
+    overflow: auto;
 }
-
 body.modal-open[style] {
-    padding-right: 14px !important;
+    padding-right: 0px !important;
 }
 
 .modal::-webkit-scrollbar {
-    width: 0px !important;
-  }
+    width: 0 !important;
+}
 
 .modal {
   position: fixed;
@@ -5474,7 +5473,7 @@ body.modal-open[style] {
 
 .modal-open .modal {
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .modal-dialog {
